--- a/src/_home.css
+++ b/src/_home.css
@@ -1,37 +1,85 @@
+.home {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: black;
+}
+
 .home h1 {
     color: #007acc;
     background-color: #000;
-    font-size: 10rem;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
         sans-serif;
     font-weight: 400;
-
     text-align: left;
     text-transform: uppercase;
-    margin: 4rem 30rem -4rem 13rem;
+    margin: 1rem 10rem -4rem 8rem;
+}
+@media screen and (min-width: 700px) {
+    .home h1 {
+        color: #007acc;
+        background-color: #000;
+        font-size: 10rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+            sans-serif;
+        font-weight: 400;
+        text-align: left;
+        text-transform: uppercase;
+        margin: 4rem 30rem -4rem 15rem;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .home h1 {
+        color: #007acc;
+        background-color: #000;
+        font-size: 10rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+            sans-serif;
+        font-weight: 400;
+        text-align: left;
+        text-transform: uppercase;
+        margin: 4rem 30rem -4rem 57rem;
+    }
 }
 
-.background_home {
-    margin: -13.5rem 0 0 50rem;
+.background_img {
+    width: 5rem;
+    margin: 0.5rem 0 0 15rem;
+}
+
+@media screen and (min-width: 700px) {
+    .background_img {
+        width: 22rem;
+        margin: -12.5rem 0 0 50rem;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .background_img {
+        width: 22rem;
+        margin: -12.5rem 0 0 92rem;
+    }
 }
 .home h2 {
     color: #ffc500;
-    font-size: 3rem;
+    font-size: 1rem;
     background-color: #000;
     width: 100%;
     height: 100%;
     text-align: center;
-    margin: 0 0 3rem 0;
+    margin: -0.5rem 0 1.5rem 0;
 }
 
-.geral h2 {
-    font-size: 4rem;
-    color: #007acc;
-    text-transform: uppercase;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
-        sans-serif;
-    text-align: center;
-    margin: 0.5rem;
+@media screen and (min-width: 700px) {
+    .home h2 {
+        color: #ffc500;
+        font-size: 3rem;
+        background-color: #000;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        margin: 0 0 3rem 0;
+    }
 }
 
 .btn_icone,
@@ -44,37 +92,114 @@
     border: 0.2rem solid #ffc500;
     border-radius: 0.5rem;
     box-shadow: 0 0.2rem 0.2rem #ffc500;
-    font-size: 1.5rem;
+    font-size: 0.5rem;
     font-weight: 700;
     text-transform: uppercase;
     margin: 0 0 2rem 1rem;
 }
 
-.btn_icone_windows {
-    margin: 0 0 0 18.5rem;
+@media screen and (min-width: 700px) {
+    .btn_icone,
+    .btn_icone_windows,
+    .btn_icone_apple,
+    .btn_icone_linux {
+        color: #000;
+        background-color: #fff;
+        padding: 0.5rem 0.5rem;
+        border: 0.2rem solid #ffc500;
+        border-radius: 0.5rem;
+        box-shadow: 0 0.2rem 0.2rem #ffc500;
+        font-size: 1.5rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin: 0 0 2rem 1rem;
+    }
 }
 
+.btn_icone_windows {
+    color: #007acc;
+    margin: 0 0 0 5.8rem;
+}
+
+@media screen and (min-width: 700px) {
+    .btn_icone_windows {
+        color: #007acc;
+        margin: 0 0 0 14.9rem;
+    }
+}
+@media screen and (min-width: 2560px) {
+    .btn_icone_windows {
+        color: #007acc;
+        margin: 0 0 0 33.8rem;
+    }
+}
 .btn_icone_apple {
-    margin: 0 0 0 15.3rem;
+    color: #c0c0c0;
+    margin: 0 0 0 2.5rem;
+}
+
+@media screen and (min-width: 700px) {
+    .btn_icone_apple {
+        color: #c0c0c0;
+        margin: 0 0 0 16.9rem;
+    }
+}
+@media screen and (min-width: 2060px) {
+    .btn_icone_apple {
+        color: #c0c0c0;
+        margin: 0 0 0 38.5rem;
+    }
 }
 
 .btn_icone_linux {
-    margin: 0 0 0 13.8rem;
+    margin: 0 0 0 2.5rem;
+}
+
+@media screen and (min-width: 700px) {
+    .btn_icone_linux {
+        margin: 0 0 0 14.9rem;
+    }
+}
+
+@media screen and (min-width: 2060px) {
+    .btn_icone_linux {
+        margin: 0 0 0 38.2rem;
+    }
 }
 
 table,
 tr,
 th {
-    font-size: 1rem;
+    font-size: 0.5rem;
     font-weight: 200;
+    line-height: 1rem;
     letter-spacing: 0.2rem;
     color: #fff;
     text-transform: uppercase;
     text-align: left;
     border: 0.01rem solid #ffc500;
     border-collapse: collapse;
-    padding: 0.5rem 5.5rem 0.5rem 0.5rem;
-    margin-left: 1rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    margin: 11.75rem 0.5rem 2rem 0.5rem;
+}
+th {
+    width: 50rem;
+}
+@media screen and (min-width: 700px) {
+    table,
+    tr,
+    th {
+        font-size: 1rem;
+        font-weight: 200;
+        letter-spacing: 0.2rem;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: left;
+        border: 0.01rem solid #ffc500;
+        border-collapse: collapse;
+        padding: 0.5rem 5.5rem 0.5rem 0.5rem;
+        margin: 35.5rem 0.5rem 2rem 0.5rem;
+    }
 }
 h3 {
     color: #fff;
