--- a/src/_home.css
+++ b/src/_home.css
@@ -14,7 +14,7 @@
     font-weight: 400;
     text-align: left;
     text-transform: uppercase;
-    margin: 1rem 10rem -4rem 8rem;
+    margin: 1rem 10rem -4rem 6rem;
 }
 @media screen and (min-width: 700px) {
     .home h1 {
@@ -45,7 +45,7 @@
 
 .background_img {
     width: 5rem;
-    margin: 0.5rem 0 0 15rem;
+    margin: 0.5rem 0 0 11rem;
 }
 
 @media screen and (min-width: 700px) {
@@ -118,7 +118,7 @@
 
 .btn_icone_windows {
     color: #007acc;
-    margin: 0 0 0 5.8rem;
+    margin: 0 0 0 2.8rem;
 }
 
 @media screen and (min-width: 700px) {
@@ -170,17 +170,17 @@
 table,
 tr,
 th {
-    font-size: 0.5rem;
+    font-size: 0.4rem;
     font-weight: 200;
     line-height: 1rem;
-    letter-spacing: 0.2rem;
+    letter-spacing: 0.1rem;
     color: #fff;
     text-transform: uppercase;
     text-align: left;
     border: 0.01rem solid #ffc500;
     border-collapse: collapse;
-    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-    margin: 13.75rem 0.5rem 2rem 0.5rem;
+    padding: 0.2rem;
+    margin: 14.75rem 0.5rem 2rem 0.5rem;
 }
 th {
     width: 50rem;
