--- a/src/_home.css
+++ b/src/_home.css
@@ -16,6 +16,7 @@
     text-transform: uppercase;
     margin: 1rem 10rem -4rem 6rem;
 }
+
 @media screen and (min-width: 700px) {
     .home h1 {
         color: #007acc;
@@ -48,12 +49,20 @@
     margin: 0.5rem 0 0 11rem;
 }
 
+@media screen and (min-width: 368px) {
+    .background_img {
+        width: 5rem;
+        margin: 0.5rem 0 0 13rem;
+    }
+}
+
 @media screen and (min-width: 700px) {
     .background_img {
         width: 22rem;
         margin: -12.5rem 0 0 50rem;
     }
 }
+
 @media screen and (min-width: 2560px) {
     .background_img {
         width: 22rem;
@@ -121,6 +130,20 @@
     margin: 0 0 0 2.8rem;
 }
 
+@media screen and (min-width: 368px) {
+    .btn_icone_windows {
+        color: #007acc;
+        margin: 0 0 0 4.9rem;
+    }
+}
+
+@media screen and (min-width: 420px) {
+    .btn_icone_windows {
+        color: #007acc;
+        margin: 0 0 0 7.8rem;
+    }
+}
+
 @media screen and (min-width: 700px) {
     .btn_icone_windows {
         color: #007acc;
@@ -184,6 +207,24 @@ th {
 }
 th {
     width: 50rem;
+}
+
+@media screen and (min-width: 368px) {
+    table,
+    tr,
+    th {
+        font-size: 0.4rem;
+        font-weight: 200;
+        line-height: 1rem;
+        letter-spacing: 0.1rem;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: left;
+        border: 0.01rem solid #ffc500;
+        border-collapse: collapse;
+        padding: 0.2rem;
+        margin: 11.75rem 0.5rem 2rem 0.5rem;
+    }
 }
 @media screen and (min-width: 700px) {
     table,
